# teenymud2

./: .gitignore  HOWTO.md  Makefile.in  NEWS  NEWS.md  README  README.md  TODO  act.c  attributes.c  attrs.h  attrutils.c  autoconf.h.in  boolexp.c  boolutils.c  bsddbm.c  buildcmds.c  cache.c  commands.c  commands.h  conf.c  conf.h  config.h  configure  configure.ac  configure.in  conn.h  convertdb.c  db.c  dbcmds.c  dbutils.c  display.c  expr.c  expr.h  externs.h  fcache.c  fcache.h  flaglist.h  gdbm.c  getdate.y  (+40 more)
branches/2.0.3/: Makefile.in  NEWS  acconfig.h  autoconf.h.in  conf.h  config.h  configure  convertdb.c  db.c  display.c  fcache.c  flaglist.h  gdbm.c  getdate.y  group.c  help.c  interface.c  look.c  main.c  prims.c  sample.conf  teeny.h  teenydb.h  teenydbm.c  textdb.c  textin.c  textout.c  wild.c
branches/2.0.3/compat/: Makefile.in  vprintf.c.orig
branches/2.0.3/doc/: help.txt
branches/2.0.3/gnu/: Makefile.in
branches/2.0.3/hash/: HashCSrch.c.or  List_LInst.c
branches/2.0.3/patch00/: Hash.c.orig  db.c.orig  tcpip.c.orig
branches/2.0.3/sha/: Makefile.in
branches/2.0.4/: act.c  attributes.c  attrutils.c  autoconf.h.in  commands.c  db.c  dbcmds.c  dbutils.c  help.c  lockout.c  misc.c  move.c  notify.c  parse.c  patch02.diffs  patch03.diffs  ptable.c  ptable.h  recycle.c  teeny.h
branches/2.0.4/compat/: Makefile.in
branches/2.0.4/doc/: help.txt
branches/2.0.4/doc/patch04/: help.txt
branches/2.0.4/hash/: HashCSrch.c  Hash_DTable.c  Hash_PStat.c  list.h
branches/2.0.4/patch00/: boolexp.c  globals.c  teeny.h
branches/2.0.4/patch01/: NEWS  help.c  interface.c  queue.c  utils.c  wiz.c
branches/2.0.4/patch02/: textin.c
branches/2.0.4/patch03/: globals.c  prims.c
branches/2.0.4/patch04/: NEWS  buildcmds.c  conf.h  interface.c  match.c  teeny.h  utils.c  wiz.c
branches/2.0.5/: NEWS  bsddbm.c  commands.c  conf.c  configure  prims.h  sample.conf  tcpip.c  wild.c
branches/2.0.5/hash/: README
branches/2.0.5p1/: display.c  flaglist.h  recycle.c  speech.c
branches/2.0.5p1/compat/: strtok.c
branches/2.0.5p1/hash/: Hash_CEntry.c  Hash_FEntry.c  List_Move.c  List_Verify.c  list.h
branches/2.0.5p1/sha/: sha_wrap.h
branches/2.0.5p2/: act.c  boolutils.c  buildcmds.c  conf.c  config.h  dbutils.c  expr.c  globals.c  match.c  ptable.c  textin.c  textout.c  utils.c
branches/2.0.5p2/compat/: alloca.c
branches/2.0.5p2/gnu/: Makefile.in
branches/2.0.5p2/hash/: Hash_EFirst.c
branches/2.0.5p2/i386/: config.cache  getdate.c
branches/2.0.5p2/i386/hash/: Makefile
branches/2.0.5p2/i386/sha/: Makefile
branches/2.0.5p2/sha/: sha.h
branches/2.0.6/: Makefile.in  NEWS  acconfig.h  boolutils.c  buildcmds.c  commands.h  conf.c  config.h  configure  configure.in  db.c  dbcmds.c  dbutils.c  display.c  expr.c  externs.h  fcache.h  gdbm.c  help.c  log.c  look.c  match.c  misc.c  money.c  move.c  notify.c  prims.c  queue.c  recycle.c  set.c  tcpip.c  teeny.h  textdb.h  textin.c  textout.c  utils.c  wild.c
branches/2.0.6/autom4te.cache/: output.0  traces.0
branches/2.0.6/compat/: Makefile.in  getopt.c  strcasestr.c  strchr.c  strerror.c  strtod.c
branches/2.0.6/hash/: Hash_DEntry.c  List_Remove.c  list.h
branches/2.0.6/sha/: sha_wrap.c
compat/: Makefile.in  README  alloca.c  bcopy.c  compat.c  random.c  strcasecmp.c  strchr.c  strftime.c  strlcat.c  strlcpy.c  strstr.c  strtok.c  strtoul.c  vprintf.c  waitpid.c
doc/: database.txt  help.txt
gnu/: README  getopt.c  getopt1.c
hash/: Hash.c  HashCSrch.c  Hash_CEntry.c  Hash_ENext.c  Hash_InitTab.c  Hash_PStat.c  List_Init.c  List_Insert.c  Makefile.in  hash.h
i386/: Makefile  autoconf.h  config.status
i386/compat/: Makefile
i386/gnu/: Makefile
patch00/: boolutils.c.orig
patch01/: config.h  globals.c  match.c  teeny.h
patch02/: NEWS  db.c  globals.c
patch03/: NEWS  interface.c  queue.c
patch04/: boolexp.c  conf.c  globals.c  sample.conf
sha/: Makefile.in  README  sha.c
trunk/: Makefile.in  NEWS  act.c  attributes.c  autoconf.h.in  boolexp.c  boolutils.c  buildcmds.c  cache.c  commands.h  conf.c  config.h  conn.h  db.c  dbcmds.c  externs.h  fcache.h  flaglist.h  getdate.y  help.c  lockout.c  look.c  match.c  parse.c  prims.c  prims.h  ptable.c  sanity.c  set.c  speech.c  teeny.h  textdb.c  vars.c  version.c  wild.c
trunk/compat/: Makefile.in  getopt1.c  strtol.c
trunk/doc/: help.txt
